releasing appendix to az

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -244,7 +244,7 @@ H_{0}^A: \mathbb{E} \left[ Y_{1} \right]  = \mathbb{E} \left[ Y_{0} \right]. \la
 
 \noindent where the second equality follows from Definition~\ref{assumption:pc} and from the definition of $Y$ in \eqref{eq:outcome}. As a policy parameter, the ATE answers the following question: What is the expected effect of fixing a randomly selected individual to treatment status, relative to fixing her to control status?\\
 
-\noindent In practice, ABC had cases of non-compliance and program attrition. Therefore, the ITT does not recover $ \mathbb{E} \left[ Y_{1} \right] - \mathbb{E} \left[ Y_{0} \right] $ and does not provide an statistic to test the hypothesis specified in \eqref{eq:ho} without further adjustment. In the study, children who did not comply with their assignment were not followed beyond age 8, at which point program treatment had ended. Since we focus on outcomes after this age, we will propose a methodology to correct for program attrition and not for imperfect compliance. Additionally, we find that outcomes before age 8 are mostly insensitive to issues of non-compliance (see Appendix~\ref{appendix:assessingcc}).\\
+\noindent In practice, ABC had cases of non-compliance and program attrition. Therefore, the ITT does not recover $ \mathbb{E} \left[ Y_{1} \right] - \mathbb{E} \left[ Y_{0} \right] $ and does not provide a statistic to test the hypothesis specified in \eqref{eq:ho} without further adjustment. In the study, children who did not comply with their assignment were not followed beyond age 8, at which point program treatment had ended. Since we focus on outcomes after this age, we will propose a methodology to correct for program attrition and not for imperfect compliance. Additionally, we find that outcomes before age 8 are mostly insensitive to issues of non-compliance (see Appendix~\ref{appendix:assessingcc}).\\
 
 \subsection{Accounting for Attrition}
 
@@ -264,15 +264,15 @@ H_{0}^A: \mathbb{E} \left[ Y_{1} \right]  = \mathbb{E} \left[ Y_{0} \right]. \la
 
 \end{assumption}
 
-\noindent Under Assumption~\ref{assumption:balance}, we can correct for program attrition in our estimation of the ITT by using inverse probability weighting (IPW). Once this correction is applied, the ITT provides an estimate fo the ATE. In other words, we can weight observations in the data to achieve balance in observed characteristics between children for whom data was collected and not collected. Assumption~\ref{assumption:balance} states that once $X$ is balanced, conditioning on program attrition has no bearing on the potential distributions of interest. Therefore, these distributions are identifiable. Once we account for program attrition, the ITT represents the average treatment effect of ABC with respect to the control group. For clarity, we omit $A$ henceforth, although in our empirical application we present estimates corrected for attrition.\\
+\noindent Under Assumption~\ref{assumption:balance}, we can correct for program attrition in our estimation of the ITT by using inverse probability weighting (IPW). Once this correction is applied, the ITT provides an estimate of the ATE. In other words, we can weight observations in the data to achieve balance in observed characteristics between children for whom data was collected and not collected. Assumption~\ref{assumption:balance} states that once $X$ is balanced, conditioning on program attrition has no bearing on the potential distributions of interest. Therefore, these distributions are identifiable. Once we account for program attrition, the ITT represents the average treatment effect of ABC with respect to the control group. For clarity, we omit $A$ henceforth, although in our empirical application we present estimates corrected for attrition.\\
 
 \subsection{Accounting for Treatment Substitution}
 
 \noindent The ATE parameter does not account for the fact that almost $70 \%$ of the control group were enrolled in different preschool alternatives across both programs. Therefore, it only captures the effect of the program \emph{relative to} the mix of alternatives used in the control group, such as home care or preschools of different quality.\footnote{If the preschool alternatives were beneficial for the children in the control group, the ATE is attenuated. This is common in early childhood education programs in which alternatives are close in quality to the program itself. Perhaps the most iconic example is the randomized evaluation of Head Start, the Head Start Impact Study, in which $15\%$ of children in the control group had access to alternative Head Start centers. ITT estimates reported by \cite{Puma_Bell_etal_2010_HeadStartImpact} are close to zero. However, this does not mean that the efficacy of Head Start is low, but rather that Head Start treatment is being compared to close substitutes.} We refer to the take-up of alternative forms of child care in the control group as treatment substitution. Therefore, to more precisely characterize the effects of the program \emph{per se}, we define two parameters fixing the alternative form of care among untreated children: 
 
 \begin{eqnarray}
-\text{ATE} \left( \text{fix } P = 0 \right) &:=& \mathbb{E} \left[ Y_{0} \left( \text{fix } P = 0 \right) \right] -  \mathbb{E} \left[ Y_{1} \left( \text{fix } P = 0 \right) \right] \\
-\text{ATE} \left( \text{fix } P = 1 \right) &:=& \mathbb{E} \left[ Y_{0} \left( \text{fix } P = 1 \right) \right] -  \mathbb{E} \left[ Y_{1} \left( \text{fix } P = 1 \right) \right],
+\text{ATE} \left( \text{fix } P = 0 \right) &:=& \mathbb{E} \left[ Y_{1} \left( \text{fix } P = 0 \right) \right] -  \mathbb{E} \left[ Y_{0} \left( \text{fix } P = 0 \right) \right] \\
+\text{ATE} \left( \text{fix } P = 1 \right) &:=& \mathbb{E} \left[ Y_{1} \left( \text{fix } P = 1 \right) \right] -  \mathbb{E} \left[ Y_{0} \left( \text{fix } P = 1 \right) \right],
 \end{eqnarray}
 
 \noindent where $P$ indicates whether a child takes up a given treatment substitute. The value of $P$ can be fixed to either $0$ or 1, indicating no take-up or take-up of a preschool alternative, respectively. $Y_{0} \left( \text{fix } P = 0 \right)$ is the child's potential outcome under no treatment or preschool alternative take up, and where $Y_{1} \left( \text{fix } P = 0 \right)$, $Y_{0} \left( \text{fix } P = 1 \right)$, and $Y_{1} \left( \text{fix } P = 1 \right) $ are similarly defined.\footnote{An alternative definition for the potential outcomes is to subscript ABC take-up and superscript alternative preschool take-up and write, for example, $Y_{0} = Y_{0}^0 + P \left( Y_{0}^1 - Y_{0}^0 \right)$.}\\
@@ -333,7 +333,7 @@ H_{0}^F: \mathbb{E} \left[ Y_{1} \right] &=&  \mathbb{E} \left[ Y_{2} \right].
 
 \noindent Another method for evaluating the first phases of ABC and CARE is to combine the data from both programs and to test effects for the common elements of their designs. The ABC treatment group and the CARE center-based childcare and family education treatment group were subject to the same center-based childcare treatment component, with the CARE children receiving an additional family education component. If there is no evidence for the treatment effect of family education in CARE, then any effect of center-based childcare and family education treatment in CARE can be attributed to the center-based childcare component, which was shared with ABC. We outline a methodology to combine the data and to exploit this fact.\\
 
-\noindent Suppose that we fail to reject $H_{0}^D$. That is, we fail to find evidence of an average treatment effect of family education in CARE. Suppose further that we reject $H_{0}^F$, so that there is an average treatment effect of center-based childcare and family education treatment, relative to family education treatment. Together, this evidence favors assuming that center-based childcare was the main component generating treatment effects in CARE, if there were any. If this claim holds, we can pool the control group children in ABC and the control group and family education treatment groups in CARE and pool the treatment group children in ABC and to center-based childcare and family education treatment in CARE to test \eqref{eq:ho}, the effect of center-based childcare. Moreover, we can fix the children in the treatment groups to either no alternative preschool or to alternative preschool. We can then proceed as in Section~\ref{section:methodsquestions} to construct the estimates and correct for non-compliance.\footnote{This reasoning implicitly imposes that there is no interaction reinforcing the two treatments CARE offered. Our evidence supports this implicit assumption. We find quantitatively similar results when evaluating the effect of center-based childcare by (i) comparing the treatment and control groups of ABC and (ii) pooling the treatment group of ABC and the highest treatment group of CARE and comparing it to a pooled group of both control groups and CARE's family education treatment group.}\\
+\noindent Suppose that we fail to reject $H_{0}^D$. That is, we fail to find evidence of an average treatment effect of family education in CARE. Suppose further that we reject $H_{0}^F$, so that there is an average treatment effect of center-based childcare and family education treatment, relative to family education treatment. Together, this evidence favors assuming that center-based childcare was the main component generating treatment effects in CARE, if there were any. If this claim holds, we can pool the control group children in ABC and the control group and family education treatment group in CARE, and pool the treatment group children in ABC and to center-based childcare and family education treatment in CARE to test \eqref{eq:ho}, the effect of center-based childcare. Moreover, we can fix the children in the treatment groups to either no alternative preschool or to alternative preschool. We can then proceed as in Section~\ref{section:methodsquestions} to construct the estimates and correct for non-compliance.\footnote{This reasoning implicitly imposes that there is no interaction reinforcing the two treatments CARE offered. Our evidence supports this implicit assumption. We find quantitatively similar results when evaluating the effect of center-based childcare by (i) comparing the treatment and control groups of ABC and (ii) pooling the treatment group of ABC and the highest treatment group of CARE and comparing it to a pooled group of both control groups and CARE's family education treatment group.}\\
 
 \noindent The results we present in Section~\ref{section:results} show little evidence of family education treatment having an effect. Thus, we present estimates of the effect of center-based childcare pooling ABC and CARE in Section~\ref{section:results}. They are similar to the effects we obtain when considering either ABC or CARE by themselves, although there are precision gains due to the increase in the sample size when considering the two programs together. 
 
@@ -363,7 +363,7 @@ Not Fixed                 & $H_{0}^K: \mathbb{E} \left[ Y_{\cdot,0} \right] = \m
 \noindent Table~\ref{table:hypotheses} outlines the different hypotheses we are able to test. To illustrate how we construct the tests, consider the following hypothesis: 
 
 \begin{equation}
-H_{0}: \mathbb{E} \left[ Y_{0,1} \right]  = \mathbb{E} \left[ Y_{0,0} \right]  \label{eq:h0fixfirst}
+H_{0}: \mathbb{G} \left[ Y_{0,1} \right]  = \mathbb{E} \left[ Y_{0,0} \right]  \label{eq:h0fixfirst}
 \end{equation}
 
 \noindent In words, we test the effect of second-phase treatment, fixing first-phase treatment to control status. Following the methodology in Section~\ref{section:methodsquestions}, we can construct an ITT to test this hypothesis.\\
@@ -382,7 +382,7 @@ H_{0}^K: \mathbb{E} \left[ Y_{\cdot,0} \right] = \mathbb{E} \left[ Y_{\cdot,1} \
 
 \noindent While our discussion thus far addresses how to test the effectiveness of the programs at improving a single outcome, human development is obviously multidimensional. In our companion paper, \citet{Elango_et_al_2015_ABC_unpublished}, we offer one method for measuring the effectiveness of a program using two statistics: the benefit-to-cost ratio and the internal rate of return. To do this, we account for the life-cycle gains of the program in dimensions such as employment, income, government transfers, health, and crime. A simpler but informative alternative is to count the number of socially positive outcomes that the program influences. We present an inference methodology for this procedure.\\
 
-\noindent This latter method requires classifying each outcome as socially positive or negative, which is an inherently subjective procedure. In the interest of objectivity, we present the counts on 131 outcomes, all of which we think are either unambiguously socially positive or unambiguously socially negative. We list these outcomes and how we classify them in Appendix~\ref{appendix:controls}.\\
+\noindent This latter method requires classifying each outcome as socially positive or negative, which is an inherently subjective procedure. In the interest of objectivity, we present the counts on 95 outcomes, all of which we think are either unambiguously socially positive or unambiguously socially negative. We list these outcomes and how we classify them in Appendix~\ref{appendix:controls}.\\
 
 \noindent The different counts we propose are examples of combining functions \citep[see][]{Pesarin_Salmaso_2010_PermutationTests}. These functions combine information on several outcomes for testing patterns in a scientific or social phenomenon---in our case, an early childhood education program. For instance, suppose we want to test the hypothesis: 
 
@@ -410,7 +410,7 @@ T_{g} = \sum _{j=1}^{\# \mathcal{O}^g} \mathbf{1} \left[ \widehat{\Delta}_{j}^{g
 
 \section{Results} \label{section:results}
 
-\noindent To start the discussion of the effects ABC and CARE have, we consider the 131 measures of human development across the life cycle we construct for our analysis and count the measures for which the program had a ``socially positive'' effect. For both ABC and CARE, we do this by focusing on the first phase of treatment to compare children who received center-based childcare to children who did not---noting that assignment was random.\footnote{In ABC, this implies comparing the children who were randomly assigned to the treatment group to the children who were randomly assigned to the control group, in the first phase. In CARE, this implies comparing the children who were randomly assigned to receive center-based childcare and home visits to the children who were randomly assigned either to the group receiving home visits only or to the control group, in the first phase as well.} Figure~\ref{fig:ppositive} displays the results from this exercise: ABC and CARE positively impact a noticeable majority of the outcomes we consider.
+\noindent To start the discussion of the effects ABC and CARE have, we consider the 95 measures of human development across the life cycle we construct for our analysis and count the measures for which the program had a ``socially positive'' effect. For both ABC and CARE, we do this by focusing on the first phase of treatment to compare children who received center-based childcare to children who did not---noting that assignment was random.\footnote{In ABC, this implies comparing the children who were randomly assigned to the treatment group to the children who were randomly assigned to the control group, in the first phase. In CARE, this implies comparing the children who were randomly assigned to receive center-based childcare and home visits to the children who were randomly assigned either to the group receiving home visits only or to the control group, in the first phase as well.} Figure~\ref{fig:ppositive} displays the results from this exercise: ABC and CARE positively impact a noticeable majority of the outcomes we consider.
 
 \begin{figure}[H]
 		\caption{Positively Impacted Outcomes, ABC and CARE} \label{fig:ppositive}
