--- a/output/abc_compromises.tex
+++ b/output/abc_compromises.tex
@@ -25,8 +25,8 @@ Case D & Treatment & Left the study & None & Missing at random \\ \midrule
 906 & Control  & Left study at 54 months & Baseline; before 54 months & Attrition after 54 months \\ \midrule
 95   & Treatment       & Developmentally delayed at 6 months & No data after diagnosis & Dropped (non-eligible) \\ 
 124 & Treatment       & Developmentally delayed at 36 months & No data after diagnosis & Dropped (non-eligible) \\ \midrule
- 82 & Control       & Crossover from control to treatment & Baseline, before age 8 & Dropped (non-eligible)  \\ 
- 119 & Control       & Crossover from control to treatment & Baseline, before age 8 & Dropped (non-eligible)  \\ \bottomrule
+ 82 & Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8 \\ 
+ 119 & Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \item Note: This table describes the various randomization compromises in ABC. For each child, we display: the ID assigned by the program staff, the nature of the compromise, the data available, and the methodological assumption when accounting for non-compliance and program attrition. 
