updated new tables for baseline ABC and CARE, Appendix

--- a/output/baseline_balance_care_1.tex
+++ b/output/baseline_balance_care_1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{CARE Baseline Characteristics, Control vs. Family Education \label{tab:care_baseline1}}
+\caption{Family Education vs. Control Groups, CARE \label{tab:baseline}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
@@ -33,7 +33,7 @@
     \begin{tablenotes}
     \scriptsize
     \item 
-    Note: This table shows the balance in observed characteristics between the treatment and control groups at baseline.
+    Note: This table shows the balance in observed characteristics between the family education group and the control group in CARE at baseline.
     For each characteristic, we present the $p$-value from a single hypothesis test.
     We also present the $p$-values from multiple testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
