anna YK and JS edits and other changes

--- a/heckman.bib
+++ b/heckman.bib
@@ -4,7 +4,7 @@
 
 @TechReport{ReportNCGenAssembly_DayCare_1983,
 Title = {Day Care; Report to the 1983 General Assembly of North Carolina},
-Author = {Legislative Research Commsion},
+Author = {{Legislative Research Commission}},
 Institution = {General Assembly of North Carolina},
 Year = {1983},
 Type = {Legislative Report}
